--- a/docker/files/etc/nginx/conf.d/default.conf
+++ b/docker/files/etc/nginx/conf.d/default.conf
@@ -12,6 +12,12 @@ server {
         alias /data/media;
     }
 
+    location /health-check {
+        access_log off;
+        return 200;
+        add_header Content-Type text/plain;
+    }
+
     location / {
         proxy_pass http://app:8000;
         proxy_set_header Host $host;
