--- a/docker/files/etc/nginx/conf.d/ecs.conf
+++ b/docker/files/etc/nginx/conf.d/ecs.conf
@@ -4,7 +4,11 @@ server {
     server_name localhost;
     charset utf-8;
 
-    location /static {
+    location /en/static {
+        alias /data/static;
+    }
+
+    location /fr/static {
         alias /data/static;
     }
 
