🔧(edulib) fix custom nginx settings again

--- a/docker/files/etc/nginx/conf.d/ecs.conf
+++ b/docker/files/etc/nginx/conf.d/ecs.conf
@@ -4,6 +4,10 @@ server {
     server_name localhost;
     charset utf-8;
 
+    location /static {
+        alias /data/static;
+    }
+
     location /en/static {
         alias /data/static;
     }
